--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "i18next": "^23.11.3",
+    "i18next-browser-languagedetector": "^7.2.1",
+    "i18next-http-backend": "^2.5.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
