--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.1",
     "react": "^18.2.0",
+    "react-calendly": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.1"
   },
