--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@fontsource-variable/figtree": "^5.0.21",
     "@fontsource-variable/nunito-sans": "^5.0.14",
     "@midudev/tailwind-animations": "^0.0.7",
-    "i18next": "^23.11.3",
+    "i18next": "^23.12.1",
     "i18next-browser-languagedetector": "^7.2.1",
-    "i18next-http-backend": "^2.5.1",
+    "i18next-http-backend": "^2.5.2",
     "react": "^18.2.0",
     "react-calendly": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-i18next": "^14.1.1"
+    "react-i18next": "^14.1.3",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
