--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource-variable/figtree": "^5.0.21",
     "@fontsource-variable/nunito-sans": "^5.0.14",
     "@midudev/tailwind-animations": "^0.0.7",
+    "dotenv": "^16.4.5",
     "i18next": "^23.12.1",
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.2",
