--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
+    { "source": "/", "destination": "/index-es.html" },
     { "source": "/es", "destination": "/index-es.html" },
     { "source": "/es/(.*)", "destination": "/index-es.html" },
     { "source": "/en", "destination": "/index-en.html" },
