--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "prettier": "3.2.5",
+    "sass": "^1.79.4",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
