--- a/package.json
+++ b/package.json
@@ -1,47 +1,50 @@
 {
-  "name": "hector-minimalist-cv",
+  "name": "react-template-ts",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "pnpm install && pnpm run dev",
     "start:ide": "pnpm install && pnpm run dev",
+    "start": "pnpm install && pnpm run dev",
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
     "preview": "vite preview",
-    "format": "prettier --write ./src"
+    "format": "prettier --write \"src/**/*\""
   },
   "dependencies": {
     "@fontsource-variable/figtree": "^5.0.21",
     "@fontsource-variable/nunito-sans": "^5.0.14",
     "@midudev/tailwind-animations": "^0.0.7",
-    "@supabase/supabase-js": "^2.45.3",
-    "dotenv": "^16.4.5",
+    "@supabase/supabase-js": "^2.45.4",
     "i18next": "^23.12.1",
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.2",
-    "react": "^18.2.0",
-    "react-calendly": "^4.3.1",
-    "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-i18next": "^14.1.3",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
+    "@eslint/js": "^9.11.1",
+    "@types/node": "^22.7.4",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "postcss": "^8.4.38",
-    "prettier": "3.2.5",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "globals": "^15.9.0",
+    "path": "^0.12.7",
+    "postcss": "^8.4.47",
+    "prettier": "3.3.3",
     "sass": "^1.79.4",
-    "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0"
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.7.0",
+    "vite": "^5.4.8",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
