--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.3",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
